2005-05-11  Bas Wijnen  <shevek@fmf.nl>

	* Makefile (top level, dist): Use versions instead of dates.
	* VERSION: New file.

2005-05-10  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.1: New file.
	* z80asm.c (enum mnemonic, mnemonic, assemble): Support END directive.
	* z80asm.c (compare, indx, readlabel): Use strncasecmp instead of
	compare.
	* z80asm.c (assemble): Fix bug with strings in DEFB.
	* z80asm.c (assemble): Allow backslash-escapes in DEFB strings.
	* z80asm.c (rd_character): Allow octal escapes in strings.

2005-03-11  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.c (rd_r): Fixed index prefix.
	* z80asm.c (assemble): Fixed register count errors.

2004-10-01  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm (rd_comma): Fixed possible buffer overflow.
	* z80asm (parse_commandline): Improved --help output.
	* z80asm (new_reference): Removed useless ++.
	* z80asm (wrt_ref, assemble): Improved list output for ds.

2004-10-01  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (enum mnemonic, mnemonics, assemble): Added dm/defm as an
	alias for db/defb.
	* README: Updated documentation accordingly.
	* z80asm.c (write_one_byte, wrtb, new_reference, wrt_ref, assemble):
	Fixed bug regarding addr increments.

2004-09-29  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c: added global variable labelprefix.
	* z80asm.c (parse_commandline, assemble): Support prefixing labels.
	* z80asm.c (assemble): fixed bug in label output.

2004-09-29  H. Peter Anvin  <hpa@users.sourceforge.net>

	* Makefile: Fixed "make clean", removed -Werror for cygwin.
	* z80asm.c (rd_out): implemented out (c),0.

2004-09-28  H. Peter Anvin  <hpa@users.sourceforge.net>

	* z80asm.c (rd_number): Added ouput parameter endptr.  Changed all
	callers.
	* z80asm.c (rd_value): Added support for Zilog-style base
	specification.
	* README: Updated documentation.

2004-09-22  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* z80asm.c (assemble): Bugfixes to make ld (nn),a and ld sp,nn work.
