@@ -1,5 +1,4 @@
 TODO for shevek's Z80 assembler:
-- fix the bugs from BUGS :-)
 - make header files containing MSX system constants
 - a flag for warnings about unofficial instructions would be nice
 - an "export" assembler directive to specify the labels to be exported with -L
